Fix outline for back link on nofo_edit page
The outline was getting cut off by the sticky header below, which
has a z-index of 20.

Adding this fixes that and has no side effects as far as I know.

--- a/bloom_nofos/bloom_nofos/static/styles.css
+++ b/bloom_nofos/bloom_nofos/static/styles.css
@@ -111,6 +111,11 @@ details > summary > span:hover {
   text-decoration: underline;
 }
 
+.back-link {
+  position: relative;
+  z-index: 25;
+}
+
 .back-link a:not(:hover) {
   text-decoration: none;
 }
